--- a/DAScratchPadExample/DAScratchPadExample/en.lproj/DAViewController_iPad.xib
+++ b/DAScratchPadExample/DAScratchPadExample/en.lproj/DAViewController_iPad.xib
@@ -42,7 +42,7 @@
 						<string key="NSFrameSize">{768, 1004}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="1045459790"/>
+						<reference key="NSNextKeyView" ref="703371844"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -53,20 +53,20 @@
 						</object>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 					</object>
-					<object class="IBUIButton" id="249010527">
+					<object class="IBUIButton" id="703371844">
 						<reference key="NSNextResponder" ref="766721923"/>
-						<int key="NSvFlags">269</int>
-						<string key="NSFrame">{{262, 942}, {53, 44}}</string>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{20, 20}, {44, 44}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="278375181"/>
+						<reference key="NSNextKeyView" ref="454804528"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<int key="IBUIButtonType">1</int>
-						<string key="IBUINormalTitle">Clear</string>
+						<string key="IBUINormalTitle">P</string>
 						<object class="NSColor" key="IBUIHighlightedTitleColor" id="314383027">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
@@ -83,11 +83,85 @@
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
 						</object>
-						<object class="NSFont" key="IBUIFont" id="489736762">
+						<object class="NSFont" key="IBUIFont" id="268220560">
 							<string key="NSName">Helvetica-Bold</string>
 							<double key="NSSize">15</double>
 							<int key="NSfFlags">16</int>
 						</object>
+					</object>
+					<object class="IBUIButton" id="454804528">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{75, 20}, {44, 44}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="903512173"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">A</string>
+						<reference key="IBUIHighlightedTitleColor" ref="314383027"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
+						<reference key="IBUIFontDescription" ref="989221589"/>
+						<reference key="IBUIFont" ref="268220560"/>
+					</object>
+					<object class="IBUISlider" id="903512173">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{135, 31}, {160, 23}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="170466078"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<float key="IBUIValue">0.5</float>
+					</object>
+					<object class="IBUISlider" id="170466078">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">292</int>
+						<string key="NSFrame">{{325, 31}, {160, 23}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="408203529"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<float key="IBUIValue">0.5</float>
+					</object>
+					<object class="IBUIButton" id="249010527">
+						<reference key="NSNextResponder" ref="766721923"/>
+						<int key="NSvFlags">269</int>
+						<string key="NSFrame">{{262, 942}, {53, 44}}</string>
+						<reference key="NSSuperview" ref="766721923"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="1045459790"/>
+						<string key="NSReuseIdentifierKey">_NS:9</string>
+						<bool key="IBUIOpaque">NO</bool>
+						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+						<int key="IBUIContentHorizontalAlignment">0</int>
+						<int key="IBUIContentVerticalAlignment">0</int>
+						<int key="IBUIButtonType">1</int>
+						<string key="IBUINormalTitle">Clear</string>
+						<reference key="IBUIHighlightedTitleColor" ref="314383027"/>
+						<object class="NSColor" key="IBUINormalTitleColor">
+							<int key="NSColorSpace">1</int>
+							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+						</object>
+						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
+						<reference key="IBUIFontDescription" ref="989221589"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="1045459790">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -110,7 +184,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="525009429">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -134,7 +208,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="690119043">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -142,7 +216,7 @@
 						<string key="NSFrame">{{419, 942}, {44, 44}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="408203529"/>
+						<reference key="NSNextKeyView" ref="278375181"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<int key="IBUITag">2</int>
@@ -158,7 +232,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUISlider" id="278375181">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -174,7 +248,7 @@
 						<int key="IBUIContentVerticalAlignment">0</int>
 						<float key="IBUIValue">5</float>
 						<float key="IBUIMinValue">1</float>
-						<float key="IBUIMaxValue">25</float>
+						<float key="IBUIMaxValue">50</float>
 					</object>
 					<object class="IBUISlider" id="255337515">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -182,14 +256,13 @@
 						<string key="NSFrame">{{466, 962}, {284, 23}}</string>
 						<reference key="NSSuperview" ref="766721923"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 						<int key="IBUIContentHorizontalAlignment">0</int>
 						<int key="IBUIContentVerticalAlignment">0</int>
-						<float key="IBUIValue">5</float>
-						<float key="IBUIMinValue">1</float>
-						<float key="IBUIMaxValue">25</float>
+						<float key="IBUIValue">1</float>
 					</object>
 					<object class="IBUIButton" id="408203529">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -214,7 +287,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="523490086">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -239,7 +312,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="10812193">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -264,7 +337,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="368981911">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -289,7 +362,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 					<object class="IBUIButton" id="692856047">
 						<reference key="NSNextResponder" ref="766721923"/>
@@ -314,7 +387,7 @@
 						</object>
 						<reference key="IBUINormalTitleShadowColor" ref="934437680"/>
 						<reference key="IBUIFontDescription" ref="989221589"/>
-						<reference key="IBUIFont" ref="489736762"/>
+						<reference key="IBUIFont" ref="268220560"/>
 					</object>
 				</array>
 				<string key="NSFrame">{{0, 20}, {768, 1004}}</string>
@@ -449,6 +522,42 @@
 					</object>
 					<int key="connectionID">27</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">paint:</string>
+						<reference key="source" ref="703371844"/>
+						<reference key="destination" ref="841351856"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">34</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">airbrush:</string>
+						<reference key="source" ref="454804528"/>
+						<reference key="destination" ref="841351856"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">33</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">airbrushFlow:</string>
+						<reference key="source" ref="903512173"/>
+						<reference key="destination" ref="841351856"/>
+						<int key="IBEventType">13</int>
+					</object>
+					<int key="connectionID">35</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">airbrushRate:</string>
+						<reference key="source" ref="170466078"/>
+						<reference key="destination" ref="841351856"/>
+						<int key="IBEventType">13</int>
+					</object>
+					<int key="connectionID">36</int>
+				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -485,12 +594,17 @@
 							<reference ref="525009429"/>
 							<reference ref="690119043"/>
 							<reference ref="1045459790"/>
+							<reference ref="703371844"/>
+							<reference ref="454804528"/>
+							<reference ref="903512173"/>
+							<reference ref="170466078"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
 						<reference key="object" ref="16227397"/>
+						<array class="NSMutableArray" key="children"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
 					<object class="IBObjectRecord">
@@ -548,6 +662,26 @@
 						<reference key="object" ref="525009429"/>
 						<reference key="parent" ref="766721923"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">29</int>
+						<reference key="object" ref="703371844"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">30</int>
+						<reference key="object" ref="454804528"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">31</int>
+						<reference key="object" ref="903512173"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">32</int>
+						<reference key="object" ref="170466078"/>
+						<reference key="parent" ref="766721923"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -562,6 +696,10 @@
 				<string key="23.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="24.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="25.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="29.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="30.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="31.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="32.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.CustomClassName">DAScratchPadView</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -574,7 +712,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">28</int>
+			<int key="maxID">36</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -590,15 +728,35 @@
 					<string key="className">DAViewController</string>
 					<string key="superclassName">UIViewController</string>
 					<dictionary class="NSMutableDictionary" key="actions">
+						<string key="airbrush:">id</string>
+						<string key="airbrushFlow:">id</string>
+						<string key="airbrushRate:">id</string>
 						<string key="clear:">id</string>
+						<string key="paint:">id</string>
 						<string key="selectImage:">id</string>
 						<string key="setColor:">id</string>
 						<string key="setOpacity:">id</string>
 						<string key="setWidth:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
+						<object class="IBActionInfo" key="airbrush:">
+							<string key="name">airbrush:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="airbrushFlow:">
+							<string key="name">airbrushFlow:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="airbrushRate:">
+							<string key="name">airbrushRate:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="clear:">
 							<string key="name">clear:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+						<object class="IBActionInfo" key="paint:">
+							<string key="name">paint:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 						<object class="IBActionInfo" key="selectImage:">
@@ -618,17 +776,25 @@
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">scratchPad</string>
-						<string key="NS.object.0">DAScratchPadView</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">scratchPad</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="airbrushFlowSlider">UISlider</string>
+						<string key="airbrushRateSlider">UISlider</string>
+						<string key="scratchPad">DAScratchPadView</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="airbrushFlowSlider">
+							<string key="name">airbrushFlowSlider</string>
+							<string key="candidateClassName">UISlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="airbrushRateSlider">
+							<string key="name">airbrushRateSlider</string>
+							<string key="candidateClassName">UISlider</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="scratchPad">
 							<string key="name">scratchPad</string>
 							<string key="candidateClassName">DAScratchPadView</string>
 						</object>
-					</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/DAViewController.h</string>
