--- a/DAScratchPadExample/DAScratchPadExample/en.lproj/DAViewController_iPhone.xib
+++ b/DAScratchPadExample/DAScratchPadExample/en.lproj/DAViewController_iPhone.xib
@@ -20,7 +20,7 @@
                 <view contentMode="center" id="8" customClass="DAScratchPadView">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="35">
                     <rect key="frame" x="20" y="82" width="53" height="44"/>
@@ -194,7 +194,7 @@
                     </connections>
                 </slider>
             </subviews>
-            <color key="backgroundColor" white="0.75" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
         </view>
